<resources>
    <string name="app_name">DashboardUI_Design</string>
    <string name="today">today</string>
    <string name="exercise">exercise</string>
    <string name="settings">settings</string>
    <string name="good_morning_chirag">Good Morning Chirag</string>
    <string name="diet_chart">Diet Chart</string>
    <string name="meditation">Meditation</string>
    <string name="exercises">Exercises</string>
    <string name="yoga">Yoga</string>
</resources>