<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackround"
    tools:context=".MainActivity">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="@color/colorWhite"
        app:menu="@menu/menu_bottom_navigation"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:id="@+id/imageHeader"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/header_backround"
                android:scaleType="centerCrop"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/imageHeader"
                android:background="#90000000"
                />

            <ImageView
                android:id="@+id/imageMenu"
                android:layout_width="35dp"
                android:layout_height="35dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="15dp"
                android:padding="4dp"
                android:src="@drawable/ic_menu"
                android:background="@drawable/menu_backround"
                app:tint="@color/colorWhite"
                />
            <TextView
                android:id="@+id/TextGoodMorning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/imageMenu"
                android:layout_marginStart="20dp"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:text="@string/good_morning_chirag"
                android:textSize="24sp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/TextGoodMorning"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/search_backround"
                android:padding="5dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                >
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_search"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="6dp"
                    android:contentDescription="@string/app_name"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="search"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="20sp"
                    tools:ignore="Autofill"
                    />


            </LinearLayout>
            <View
                android:id="@+id/imageSupporter"
                android:layout_width="1dp"
                android:layout_height="1dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/imageHeader"
                android:layout_marginBottom="50dp"
                />
            <androidx.cardview.widget.CardView
                android:id="@+id/cardviewDiet"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/imageSupporter"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="25dp"
                android:background="@color/colorWhite"
                app:cardCornerRadius="12dp"

                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="15dp"
                    >
                    <ImageView
                        android:layout_width="130dp"
                        android:layout_height="120dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/diet"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/diet_chart"
                        android:gravity="center"
                        android:layout_marginTop="6dp"
                        android:textSize="16sp"
                        android:textColor="@color/colorPrimaryText"
                        android:textStyle="bold"
                        />


                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardviewExercises"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/imageSupporter"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="25dp"
                android:background="@color/colorWhite"
                app:cardCornerRadius="12dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="15dp"
                    >
                    <ImageView
                        android:layout_width="130dp"
                        android:layout_height="120dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/exercise"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/exercises"
                        android:gravity="center"
                        android:layout_marginTop="6dp"
                        android:textSize="16sp"
                        android:textColor="@color/colorPrimaryText"
                        android:textStyle="bold"

                      />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/cardviewExercises"
                android:layout_marginTop="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="25dp"
                android:background="@color/colorWhite"
                app:cardCornerRadius="12dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="15dp"
                    >
                    <ImageView
                        android:layout_width="130dp"
                        android:layout_height="120dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/yoga"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/yoga"
                        android:gravity="center"
                        android:layout_marginTop="6dp"
                        android:textSize="16sp"
                        android:textColor="@color/colorPrimaryText"
                        android:textStyle="bold"

                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/cardviewDiet"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="25dp"
                android:layout_marginTop="30dp"

                android:background="@color/colorWhite"
                app:cardCornerRadius="12dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="15dp"
                    >
                    <ImageView
                        android:layout_width="130dp"
                        android:layout_height="120dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/meditation"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/meditation"
                        android:gravity="center"
                        android:layout_marginTop="6dp"
                        android:textSize="16sp"
                        android:textColor="@color/colorPrimaryText"
                        android:textStyle="bold"

                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>



        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>